# web-agent

./: README.md
trae-web/agent-py/: pyproject.toml
trae-web/agent-py/src/trae_web/: agent.py  demo.py  state.py
trae-web/agent-py/src/trae_web.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
trae-web/agent-py/src/trae_web/tools/: __init__.py  bash_tool.py  edit_tool.py  task_done_tool.py
trae-web/agent-py/tests/: clean_stream_test.py  sync_test.py  test_agent.py
web-agent/agent-py/: .env  .env.example  .gitignore  ACP_IMPLEMENTATION.md  ACP_PLAN.md  AGENT_SKILLS.md  HAHAHA.md  REWARD_HACKING_FIX_REPORT.md  THINKING_AGENT_SUMMARY.md  compose.yaml  demo_acp_demo.py  demo_acp_info.py  demo_thinking_agent.py  pyproject.toml  test.txt  test_comprehensive_thinking.py  test_final_verification.py  test_main_agent_coding.py  test_main_agent_simple.py  test_sequential_output.py  test_simple_output.py  test_simple_thinking.py  test_simple_workflow.py  test_thinking_tools.py  test_thinking_workflow.py  test_working_workflow.py
web-agent/agent-py/src/trae_web.egg-info/: SOURCES.txt
web-agent/agent-py/src/web_agent/: agent.py  config.py  create_agent.py  demo.py  state.py
web-agent/agent-py/src/web_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web-agent/agent-py/src/web_agent/ACP/: __init__.py  __main__.py  client.py  config.json  server.py
web-agent/agent-py/src/web_agent/tools/: __init__.py  ast_grep.py  (+4 more)
web-agent/agent-py/tests/: clean_stream_test.py  custom_agent_test.py  graph_agent_test.py  plan_execute_test.py  sync_test.py  test_acp_integration.py  test_agent.py  test_thinking_agent.py  test_wd_injection.py  test_working_directory.py
(+23 files in other folders)
