[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-agent"
version = "0.1.0"
description = "IDE Agent with trae-agent tools converted to LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copilotkit>=0.1.65",
    "dotenv>=0.9.9",
    "langgraph>=0.6.7",
    "uvicorn>=0.37.0",
    "langchain-core>=0.3.12",
    "langchain-openai>=0.3.0",
    "fastapi>=0.104.0",
    "ipython>=9.6.0",
    "langchain-community>=0.3.30",
    "psycopg-binary>=3.2.10",
    "psycopg-pool>=3.2.6",
    "psycopg[pool]>=3.2.10",
    "langgraph-checkpoint-postgres>=2.0.24",
    "langfuse>=3.6.1",
]

# Use proper TOML table structure instead of inline tables
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["web_agent*"]
exclude = []
